--- a/newFlight.html
+++ b/newFlight.html
@@ -60,7 +60,7 @@
                 const Remarks = document.querySelector('#Remarks').value;
 
                 const flight = {
-                    "Date": FlightDate,
+                    "FlightDate": FlightDate,
                     "AType": AType,
                     "AReg": AReg,
                     "Captain": Captain,
