--- a/newFlight.html
+++ b/newFlight.html
@@ -6,31 +6,7 @@
     <body>
         <h1>New Flight</h1>
         <form>
-            <div>
-                <label>Date</label>
-                <input type="date", id="FlightDate" autofocus>
-                <label>Aircraft Type</label>
-                <input type="text", id="AType" autofocus>
-                <label>Aircraft Reg</label>
-                <input type="text", id="AReg" autofocus>
-                <label>Captain</label>
-                <input type="text", id="Captain" autofocus>
-                <label>Holder Operating Capacity</label>
-                <input type="text", id="HOC" autofocus>
-                <label>From</label>
-                <input type="text", id="From" autofocus>
-                <label>To</label>
-                <input type="text", id="To" autofocus>
-                <label>Departure Time</label>
-                <input type="datetime-local", id="Dep" autofocus>
-                <label>Arrival Time</label>
-                <input type="datetime-local", id="Arv" autofocus>
-                <label>In Command (P1)</label>
-                <input type="number" step="0.1" id="P1" autofocus>
-                <label>Dual (P2)</label>
-                <input type="number" step="0.1" id="P2" autofocus>
-                <label>Remarks</label>
-                <input type="text", id="Remarks" autofocus>
+            <div class = "NewFlightForm">
             </div>
             <button type="submit">Add Flight</button>
         </form>
@@ -40,43 +16,52 @@
             const {ipcRenderer} = electron;
 
             const form = document.querySelector('form');
+            let logBookHeaders = [];
 
             form.addEventListener('submit', submitFlight);
+
+
+            ipcRenderer.on('init:headers', function(e, headerInfo){
+                    logBookHeaders = headerInfo;
+                    createForm();
+            });
+
+            function createForm(){
+                const formDiv = document.querySelector('.NewFlightForm');
+
+                logBookHeaders.forEach(function(header){
+                    console.log(header);
+
+                    let currentLabel = document.createElement('label');
+                    let headerText = document.createTextNode(header.title);
+                    currentLabel.appendChild(headerText);
+
+                    let currentInput = document.createElement('input');
+                    currentInput.type = header.dataType;
+                    currentInput.id = header.id;
+                    if (header.hasOwnProperty('step'))
+                        currentInput.step = header.step;
+
+                    formDiv.appendChild(currentLabel);
+                    formDiv.appendChild(currentInput);
+                    formDiv.appendChild(document.createElement('br'));
+                });
+            }
+
 
             function submitFlight(e){
                 e.preventDefault();
 
-                const FlightDate = document.querySelector('#FlightDate').value;
-                const AType = document.querySelector('#AType').value;
-                const AReg = document.querySelector('#AReg').value;
-                const Captain = document.querySelector('#Captain').value;
-                const HOC = document.querySelector('#HOC').value;
-                const From = document.querySelector('#From').value;
-                const To = document.querySelector('#To').value;
-                const Departure = document.querySelector('#Dep').value;
-                const Arrival = document.querySelector('#Arv').value;
-                const P1 = document.querySelector('#P1').value;
-                const P2 = document.querySelector('#P2').value;
-                const Remarks = document.querySelector('#Remarks').value;
+                let newFlight = {};
 
-                const flight = {
-                    "FlightDate": FlightDate,
-                    "AType": AType,
-                    "AReg": AReg,
-                    "Captain": Captain,
-                    "HOC": HOC,
-                    "From": From,
-                    "To": To,
-                    "Departure": Departure,
-                    "Arrival": Arrival,
-                    "P1": P1,
-                    "P2": P2,
-                    "Remarks": Remarks
-                };
+                logBookHeaders.forEach(function(header){
+                    let value = document.querySelector('#'+header.id).value;
+                    newFlight[header.id] = value;
+                });
 
-                console.log(flight);
+                console.log(newFlight);
 
-                ipcRenderer.send('flight:add',flight);
+                ipcRenderer.send('flight:add',newFlight);
             }
         </script>
     </body>
