--- a/main.html
+++ b/main.html
@@ -2,16 +2,21 @@
     <Head>
         <title>Log Book</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="stylesheet" href="custom.css">
     </Head>
     <body>
+        <div class="container top-menu">
+            <button type="button" class="btn btn-success menu-btn">New Flight</button>
+            <button type="button" class="btn btn-warning menu-btn">Save</button>
+            <button type="button" class="btn btn-danger menu-btn">Quit</button>
+        </div>
         <div class="container">
-            <h1>Log Book</h1>
-
-            <table class = "table table-bordered">
+            <table class = "table table-bordered table-dark">
                 <thead></thead>
                 <tbody></tbody>
-            </div>
-        </table>
+                <tfoot></tfoot>
+            </table>
+        </div>
 
         <script>
             const electron = require('electron');
@@ -19,7 +24,7 @@
 
             const thead = document.querySelector('thead');
             const tbody = document.querySelector('tbody');
-
+            const tfoot = document.querySelector('tfoot');
 
             ipcRenderer.on('init:headers', function(e,headerData){
                 console.log("Creating headers");
@@ -33,8 +38,21 @@
                     th.appendChild(itemText);
                     tr.appendChild(th);
                 });
-
+                //Blank column
+                tr.appendChild(document.createElement('th'));
                 thead.appendChild(tr);
+
+                //Footer info
+                tr = document.createElement('tr');
+                headerData.forEach(function(item) {
+                    let th = document.createElement('th');
+                    tr.appendChild(th);
+                });
+                //Blank column
+                let th = document.createElement('th');
+                tr.appendChild(th);
+                tfoot.appendChild(tr);
+
             });
 
             ipcRenderer.on('flight:add', function(e, flight){
@@ -49,6 +67,15 @@
                     th.appendChild(itemText);
                     tr.appendChild(th);
                 });
+
+                //Edit delete buttons
+                let buttonColumn = document.createElement('th')
+                buttonColumn.innerHTML = `<div class="btn-group" role="group" aria-label="Basic example">
+                    <button type="button" class="btn btn-warning">Edit</button>
+                    <button type="button" class="btn btn-danger">Delete</button>
+                </div>`
+                
+                tr.appendChild(buttonColumn);
 
                 tbody.appendChild(tr);
             });
